--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start server": "node src/server/server.mjs"
   },
   "dependencies": {
+    "@apollo/server": "^4.7.1",
     "apollo-boost": "^0.4.9",
+    "casual": "^1.6.2",
     "core-js": "^3.8.3",
     "graphql": "^15.8.0",
     "graphql-tag": "^2.12.6",
+    "graphql-tools": "^8.3.20",
     "vue": "^2.6.14",
     "vue-apollo": "^3.1.0",
     "vuetify": "^2.6.0",
