--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "apollo-boost": "^0.4.9",
     "casual": "^1.6.2",
     "core-js": "^3.8.3",
-    "graphql": "^15.8.0",
+    "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "graphql-tools": "^8.3.20",
+    "type-graphql": "^2.0.0-beta.1",
     "vue": "^2.6.14",
     "vue-apollo": "^3.1.0",
     "vuetify": "^2.6.0",
