--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start client": "vue-cli-service serve",
+    "start:client": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@apollo/server": "^4.7.1",
-    "apollo-boost": "^0.4.9",
-    "casual": "^1.6.2",
     "core-js": "^3.8.3",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
