--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start server": "node server.mjs"
+    "start:server": "node server.mjs"
   },
   "keywords": [],
   "author": "",
